# DjangoBlog

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
accounts/: forms.py  urls.py  views.py
blog/: admin.py  context_processors.py  documents.py  models.py  tests.py  urls.py  views.py
blog/migrations/: 0009_remove_blogsettings_beian_code_and_more.py
blog/templatetags/: blog_tags.py
comments/: models.py  test_comment_business_logic.py
comments/migrations/: 0006_alter_comment_body.py
deploy/: nginx.conf
deploy/docker-compose/: docker-compose.es.yml  docker-compose.yml
djangoblog/: admin_site.py  base_views.py  blog_signals.py  constants.py  error_views.py  feeds.py  mixins.py  settings.py  test_base.py  test_email_integration_complete.py  test_plugins.py  urls.py  utils.py  whoosh_cn_backend.py
docs/: README-cn.md  README-en.md  docker-en.md  docker.md  k8s-en.md
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: main.js
frontend/src/components/: backToTop.js  commentSystem.js  imageLightbox.js  navigation.js  (+1 more)
oauth/: models.py  urls.py  views.py
oauth/migrations/: 0004_alter_oauthconfig_options.py
plugins/article_copyright/: plugin.py
plugins/cloudflare_cache/: api.py
plugins/reading_time/: plugin.py
templates/account/: forget_password.html  login.html
templates/blog/: article_archives.html  article_detail.html  article_index.html  error_page.html  links_list.html
templates/search/: search.html
templates/share_layout/: base.html  base_account.html  footer.html
(+16 files in other folders)
