[project]
name = "djangoblog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.14.3",
    "bleach==6.3.0",
    "coverage==7.13.1",
    "django==5.2.13",
    "django-appconf==1.2.0",
    "django-compressor==4.6.0",
    "django-echarts==0.6.0",
    "django-haystack==3.3.0",
    "django-ipware==7.0.1",
    "django-mdeditor==0.1.20",
    "django-uuslug==2.0.0",
    "elasticsearch==8.6.1",
    "elasticsearch-dsl==8.11.0",
    "gevent==25.9.1",
    "greenlet==3.3.0",
    "htmlgenerator==1.2.32",
    "jieba==0.42.1",
    "jinja2==3.1.6",
    "jsonpickle==4.1.1",
    "markdown==3.10.1",
    "markupsafe==3.0.3",
    "pillow==12.1.1",
    "prettytable==3.17.0",
    "propcache==0.4.1",
    "psycopg2>=2.9.11",
    "pycparser==3.0",
    "pyecharts==2.0.9",
    "pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv>=1.2.2",
    "python-ipware==3.0.0",
    "python-logstash==0.4.8",
    "python-slugify==8.0.4",
    "pytz==2025.2",
    "rcssmin==1.2.2",
    "redis==7.1.0",
    "requests==2.33.0",
    "rjsmin==1.2.5",
    "setuptools==80.10.1",
    "simplejson==3.20.2",
    "tzdata==2025.3",
    "user-agents==2.2.0",
    "whoosh==2.7.4",
]
